--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "jest-cli": "^29.5.0",
     "prettier": "^2.8.8",
     "simple-git-hooks": "^2.8.1"
+  },
+  "dependencies": {
+    "commander": "^10.0.1"
   }
 }
