--- a/package.json
+++ b/package.json
@@ -31,10 +31,12 @@
     "eslint-plugin-jest": "^27.2.1",
     "jest": "^29.5.0",
     "jest-cli": "^29.5.0",
+    "nock": "^13.3.1",
     "prettier": "^2.8.8",
     "simple-git-hooks": "^2.8.1"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "commander": "^10.0.1"
   }
 }
